# openmetrics-parser

./: .gitmodules  Cargo.toml  README.md
src/: lib.rs  openmetrics.pest  parsers.rs
src/internal/: marshals.rs  mod.rs  traits.rs  utils.rs
src/openmetrics/: mod.rs  model.rs  openmetrics.pest  parsers.rs  tests.rs
src/openmetrics/testdata/: example.txt
src/prometheus/: mod.rs  parsers.rs  prometheus.pest  tests.rs
src/prometheus/testdata/: case_sensitive_example.txt  gravelgateway#17.txt  gravelgateway#5.txt  leading_underscore.txt  untyped_example.txt
src/public/: mod.rs  model.rs  tests.rs  types.rs
