[package]
name = "openmetrics-parser"
version = "0.4.1"
edition = "2018"
license = "LGPL-3.0"
description = "An OpenMetrics/Prometheus Text Exposition Format Parser"
homepage = "https://github.com/sinkingpoint/openmetrics-parser"
repository = "https://github.com/sinkingpoint/openmetrics-parser"
readme = "README.md"
keywords = ["openmetrics", "prometheus", "parser"]
exclude = [
    "OpenMetrics"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
auto_ops = "0.3.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
